# xtsqlorm

./: .gitignore  CHANGELOG.md  CODE_OPTIMIZATION_COMPLETE.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PROJECT_RELEASE_READY.md  README.en.md  README.md  VERSION_UPDATE_SUMMARY.md  main.py  pyproject.toml
docs/: ASYNC_ARCHITECTURE_COMPLETE.md  REFACTORING_SUMMARY.md  TABLE_UTILS_UPDATE.md
docs/architecture_review/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  FLAT_ARCHITECTURE_PLAN.md  QUICK_FIX_PROPOSAL.py  README.md
examples/: ALL_FIXES_COMPLETE.md  ASYNC_EXAMPLES_FIX_COMPLETE.md  CHANGES_DROP_TABLE.md  CONVERSION_COMPLETE.md  CONVERT_TO_EXECUTABLE.md  EXAMPLE_05_ENHANCEMENT_COMPLETE.md  FIXES_SUMMARY.md  FIX_DETACHED_INSTANCE_ERROR.md  FIX_DROP_TABLE.md  FIX_GENERATE_MODEL_FILE.md  FIX_MIXINS_EXAMPLE.md  ID_FIELD_FIX.md  ID_LOWERCASE_FIX_SUMMARY.md  PYDANTIC_V2_FIX_COMPLETE.md  PYDANTIC_V2_MIGRATION.md  README.md  VALIDATORS_ENHANCEMENT_COMPLETE.md  async_example.py  example_01_basic_sync.py  example_02_advanced_operations.py  example_03_table_reflection.py  example_04_mixins_and_types.py  example_05_data_validation.py  example_06_transactions.py  example_07_complete_workflow.py  example_08_table_management.py  example_usage.py  examples_async.py  examples_table_utils.py  generated_models.py  test_all_examples.py  test_drop_table_fix.py  test_id_field.py  user.py
xtsqlorm/: __init__.py  async_engine.py  async_repository.py  async_session.py  base.py  cfg.py  engine.py  factory.py  mixins.py  operations.py  protocols.py  repository.py  session.py  sql_builder.py  table_utils.py  types.py  uow.py  validators.py
xtsqlorm/core/: async_connection.py  async_operations.py  connection.py  factory.py  operations.py
xtsqlorm/models/: __init__.py  base.py
